--- a/src/components/atom/SearchCity/style.scss
+++ b/src/components/atom/SearchCity/style.scss
@@ -9,7 +9,9 @@
   color: black;
   display: flex;
   align-items: center;
-
+  .Spin {
+    margin-right: 20px;
+  }
   .input {
     margin-left: 7px;
     width: 100%;
