--- a/src/components/organisms/LocationSelect/style.scss
+++ b/src/components/organisms/LocationSelect/style.scss
@@ -270,14 +270,14 @@
 }
 .LocationSelect-number-of-tickets__item {
   width: 33.33%;
+  background: #ffff;
+
   &.item {
     height: 192px;
     padding: 20px 36px;
-    &.adult {
+
+    &.active {
       background: #f7f6f6;
-      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-    }
-    &.children {
       border: 1px solid rgba(255, 168, 0, 0.79);
       .item__description {
         color: #928f94;
@@ -293,7 +293,7 @@
     box-sizing: border-box;
     border-radius: 5px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     padding-left: 17px;
     align-items: center;
     font-family: $font;
@@ -301,9 +301,12 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 21px;
+    padding-right: 20px;
 
     color: #292929;
     margin-bottom: 23px;
+    .item__count-counter {
+    }
   }
   .item__description {
     max-width: 240px;
