--- a/src/components/molecules/PassengerCard/style.scss
+++ b/src/components/molecules/PassengerCard/style.scss
@@ -2,8 +2,21 @@
 .PassengerCard {
   display: flex;
   flex-direction: column;
+  .ant-collapse
+    > .ant-collapse-item
+    > .ant-collapse-header
+    .ant-collapse-arrow {
+    display: none;
+  }
+  .ant-collapse-content > .ant-collapse-content-box {
+    padding: 0;
+  }
+  .ant-collapse > .ant-collapse-item > .ant-collapse-header {
+    padding: 0;
+  }
 }
 .PassengerCard__top {
+  width: 100%;
   display: flex;
   align-items: center;
   height: 107px;
@@ -68,7 +81,7 @@
     &.birthCertificate {
       padding-left: 16px;
       padding-right: 16px;
-      max-width: 281px;
+      max-width: 300px;
       letter-spacing: 1px;
     }
   }
