--- a/src/components/atom/Button/style.scss
+++ b/src/components/atom/Button/style.scss
@@ -16,7 +16,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #ffffff;
+    background-color: inherit;
   }
   &.learnMore {
     width: 325px;
