--- a/src/components/organisms/Pay/style.scss
+++ b/src/components/organisms/Pay/style.scss
@@ -2,7 +2,7 @@ html {
   --antd-wave-shadow-color: #ffa800;
 }
 .payPage__main {
-  /* antd */
+  margin-bottom: 100px;
 
   .ant-select-selector {
     width: 280px !important;
