--- a/src/components/molecules/SearchTicket/style.scss
+++ b/src/components/molecules/SearchTicket/style.scss
@@ -1,6 +1,7 @@
 @import "../../../scss/config.scss";
 .SearchTicket {
   display: flex;
+  cursor: pointer;
 }
 .SearchTicket__title {
   font-family: Calibri;
