--- a/src/components/organisms/Footer/style.scss
+++ b/src/components/organisms/Footer/style.scss
@@ -79,6 +79,8 @@
   margin-top: 16px;
   width: 447px;
   height: 60px;
+  padding-left: 10px;
+  color: #2d2b2f;
 }
 .subscription-form__button {
   width: 169px;
